--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node src/dist/app.js",
+    "start": "node src/dist/server.js",
     "dev": "npm run build && npm run start",
     "test": "echo \\\"Error: no src/test specified\\\" && exit 1"
   },
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
