--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/dist/server.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node src/dist/server.js",
     "dev": "npm run build && npm run start",
-    "test": "echo \\\"Error: no src/test specified\\\" && exit 1"
+    "test": "npm run build && node src/dist/test/sentences.test.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.2",
+    "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "typescript": "^5.0.4"
   }
