--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node src/dist/server.js",
-    "dev": "npm run build && npm run start",
-    "test": "npm run build && node src/dist/test/sentences.test.js"
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -21,8 +20,6 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.2",
-    "chai": "^4.3.7",
-    "chai-http": "^4.3.0",
     "typescript": "^5.0.4"
   }
 }
