--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "dotenv": "^16.1.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "recharts": "^2.6.2"
