--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/dist/server.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node src/dist/server.js",
+    "start": "node dist/server.js",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
