Remove vite framework from client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-alpine
 LABEL authors="serms1999"
-LABEL version="1.0"
+LABEL version="2.0"
 MAINTAINER Sergio Marin Sanchez "serms1999@gmail.com"
 
 WORKDIR /client
@@ -11,4 +11,6 @@ ENV PATH /client/node_modules/.bin:$PATH
 RUN npm install
 RUN npm run build
 
-CMD ["npm", "run", "preview"]
+EXPOSE $CLIENT_PORT
+
+CMD ["npm", "run", "start"]
