--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
-    "crypto": "^1.0.1",
     "dotenv": "^16.1.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -33,7 +32,7 @@
     "build": "BUILD_PATH='./dist' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "serve -s build -p $CLIENT_PORT"
+    "start": "serve -s dist -p $CLIENT_PORT"
   },
   "eslintConfig": {
     "extends": [
