--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,12 @@ MAINTAINER Sergio Marin Sanchez "serms1999@gmail.com"
 WORKDIR /client
 COPY . .
 
+ARG REACT_APP_SERVER_HOSTNAME
+ARG REACT_APP_SERVER_PORT
+ARG REACT_APP_HTTPS
+ENV REACT_APP_SERVER_HOSTNAME $REACT_APP_SERVER_HOSTNAME
+ENV REACT_APP_SERVER_PORT $REACT_APP_SERVER_PORT
+ENV REACT_APP_HTTPS $REACT_APP_HTTPS
 ENV PATH /client/node_modules/.bin:$PATH
 
 RUN npm install
