fix client docker not loading env variables and minor improvements

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,12 +6,11 @@ MAINTAINER Sergio Marin Sanchez "serms1999@gmail.com"
 WORKDIR /client
 COPY . .
 
-ARG REACT_APP_SERVER_HOSTNAME
-ARG REACT_APP_SERVER_PORT
-ARG REACT_APP_HTTPS
-ENV REACT_APP_SERVER_HOSTNAME $REACT_APP_SERVER_HOSTNAME
-ENV REACT_APP_SERVER_PORT $REACT_APP_SERVER_PORT
-ENV REACT_APP_HTTPS $REACT_APP_HTTPS
+ENV SERVER_HOSTNAME=localhost
+ENV SERVER_PORT=8000
+ENV HTTPS=true
+ENV CLIENT_PORT=80
+
 ENV PATH /client/node_modules/.bin:$PATH
 
 RUN npm install
@@ -19,4 +18,4 @@ RUN npm run build
 
 EXPOSE $CLIENT_PORT
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start:env"]
